--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -1,18 +1,17 @@
-name: Clippy
-
 on: [push, pull_request]
 
-jobs:
-  build:
-    runs-on: ubuntu-latest
+name: Clippy
 
+jobs:
+  clippy_check:
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
       - uses: actions-rs/toolchain@v1
         with:
           toolchain: stable
-          profile: minimal
           components: clippy, rustfmt
           override: true
-      - name: Run clippy
-        run: make lint
+      - uses: actions-rs/clippy-check@v1
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
